--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -395,7 +395,9 @@ img.mini_icon {
 
 .mini_action {
   font-size: 8pt!important;
-  float: right;
+  position: absolute;
+  padding: 0.5em;
+  background-color: #f0f0f0;
   font-weight: normal;
   text-transform: lowercase;
 }
