Add unused tables list to pricing calculation

--- a/gtpb_clientside/WEB-INF/templates/gui/appstore/1_app_store.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/appstore/1_app_store.vm
@@ -90,6 +90,14 @@
         <li>App monthly cost = $enabledApps.size() apps x 25 = <b>&pound;$appCost</b></li>
         <li>Total = <b>&pound;$totalCost</b></li>
       </ul>
+      <h2>Low Activity Tables</h2>
+      These tables have low activity and are <i>possibly</i> unused:<p>
+      <ul>
+      #set($unusedTables = $usageStats.getUnusedTables())
+      #foreach($table in $unusedTables)
+        <li>$table</li>
+      #end
+      </ul>
     </div>
     ]]>
   </htmlContent>
