--- a/gtpb_clientside/resources/button/button.css
+++ b/gtpb_clientside/resources/button/button.css
@@ -9,10 +9,18 @@ button.gtpb {
   text-shadow: 0px 1px 0px white;
   float: left;
   border-radius: 1em;
+  /* Standard
   background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,0.5) 0%, rgba(255,255,255,0) 100%);
   background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%);
   background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%);
   background: radial-gradient(center, ellipse cover, rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%);
+  */
+  /* Xmas */
+  background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 20%, rgba(255,255,255,0.5) 100%);
+  background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 20%,rgba(255,255,255,0.5) 100%);
+  background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 20%,rgba(255,255,255,0.5) 100%);
+  background: radial-gradient(center, ellipse cover, rgba(255,255,255,1) 20%,rgba(255,255,255,0.5) 100%);
+  
 }
 
 button.gtpb.captioned {
