--- a/gtpb_clientside/resources/button/button.css
+++ b/gtpb_clientside/resources/button/button.css
@@ -48,10 +48,18 @@ button.gtpb img { border:0; }
 button.gtpb:hover { cursor: pointer; }		 
 button.gtpb:active { background-color: gray; }
 button.gtpb.selected {
+	/* Standard
   background: -moz-linear-gradient(top, #555555, #999999);
   background: -webkit-linear-gradient(top, #555555, #999999);
   background: -ms-linear-gradient(top, #555555, #999999);
   background: linear-gradient(top, #555555, #999999);
+  /*
+  /* xmas */
+  background: -moz-linear-gradient(top, rgba(0,0,0,0.5), #999999);
+  background: -webkit-linear-gradient(top, rgba(0,0,0,0.5), #999999);
+  background: -ms-linear-gradient(top, rgba(0,0,0,0.5), #999999);
+  background: linear-gradient(top, rgba(0,0,0,0.5), #999999);
+	/* *.
   border: 1px solid #b6b6b6; /* icon colour */
 }
 
