--- a/gtpb_clientside/resources/button/button.css
+++ b/gtpb_clientside/resources/button/button.css
@@ -9,18 +9,18 @@ button.gtpb {
   text-shadow: 0px 1px 0px white;
   float: left;
   border-radius: 1em;
-  /* Standard */
+  /* Standard
   background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,0.5) 0%, rgba(255,255,255,0) 100%);
   background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%);
   background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%);
   background: radial-gradient(center, ellipse cover, rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%);
   /* */
-  /* Xmas
+  /* Xmas */
   background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 20%, rgba(255,255,255,0.5) 100%);
   background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 20%,rgba(255,255,255,0.5) 100%);
   background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 20%,rgba(255,255,255,0.5) 100%);
   background: radial-gradient(center, ellipse cover, rgba(255,255,255,1) 20%,rgba(255,255,255,0.5) 100%);
-  */
+  /* */
 }
 
 button.gtpb.captioned {
@@ -48,13 +48,13 @@ button.gtpb img { border:0; }
 button.gtpb:hover { cursor: pointer; }		 
 button.gtpb:active { background-color: gray; }
 button.gtpb.selected {
-	/* Standard */
+	/* Standard
   background: -moz-linear-gradient(top, #555555, #999999);
   background: -webkit-linear-gradient(top, #555555, #999999);
   background: -ms-linear-gradient(top, #555555, #999999);
   background: linear-gradient(top, #555555, #999999);
   /* */
-  /* xmas 
+  /* xmas  */
   background: -moz-linear-gradient(top, rgba(0,0,0,0.5), #999999);
   background: -webkit-linear-gradient(top, rgba(0,0,0,0.5), #999999);
   background: -ms-linear-gradient(top, rgba(0,0,0,0.5), #999999);
