Differentiate backup server from live server

--- a/gtpb_clientside/resources/display_application.css
+++ b/gtpb_clientside/resources/display_application.css
@@ -41,7 +41,7 @@ body {
 
 .localhost #toolbarDiv {
 	background: red;
-	background-image : url("resources/toolbar/localhost.png");
+	background-image : url("../resources/toolbar/backup.png");
 }
 
 #toolbarDiv img.divider {
