--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -22,7 +22,7 @@ table#reportData th {
   font-size:10pt; 
   color:black;
   font-weight:bold;
-  border:1px solid #f0f0f0; /* #cecece */
+  border:1px solid white; /* #f0f0f0 / #cecece */
   border-top: 0px;
   padding:5px;
   text-align:left;
@@ -67,6 +67,7 @@ table#reportData th div {
   width:100%;
   overflow:hidden;
   white-space:nowrap;
+  text-overflow: ellipsis;
 }
 
 table#reportData th.waiting {
