--- a/gtpb_clientside/resources/display_application.css
+++ b/gtpb_clientside/resources/display_application.css
@@ -24,10 +24,10 @@ body {
 	/* border-bottom: 1px solid #cecece; /* 5px solid #eaba72; */
 	z-index: 1;
 	/* Standard */
-  background: -webkit-linear-gradient(top, white, #f0f0f0);
-  background: -moz-linear-gradient(top, white, #f0f0f0);
-  background: -ms-linear-gradient(top, white, #f0f0f0);
-  background: linear-gradient(top, white, #f0f0f0);
+  background: -webkit-linear-gradient(top, white, #fafafa);
+  background: -moz-linear-gradient(top, white, #fafafa);
+  background: -ms-linear-gradient(top, white, #fafafa);
+  background: linear-gradient(top, white, #fafafa);
   /* */
   /* xmas
   background-image: url('../resources/toolbar/xmas.jpg');
