--- a/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
@@ -32,7 +32,7 @@
 	  <span class="greytext" style="font-size:8pt">Allow custom actions (such as 'print invoice') to lock records against future editing</span><p>
       <input type="checkbox" name="tableformpublic" gtpb_update_table #if($table.getTableFormPublic()) checked #end onchange="top.oBuffer.writeBuffer(this);" identifier="$internalTableName" gtpb_internaltablename="$internalTableName">
 	  Public data entry<br>
-	  <span class="greytext" style="font-size:8pt">Publish a <a href="Public.ab?show_form=true&c=$view.getLoggedInUser().getCompany().getInternalCompanyName()&t=$internalTableName" target="_blank">form</a> which the general public can use to enter data</span><br>
+	  <span class="greytext" style="font-size:8pt">Publish a <a href="Public.ab?show_form=true&c=$view.getLoggedInUser().getCompany().getInternalCompanyName()&t=$internalTableName" target="_blank">form</a> which the general public can use to enter data.<br>Send notifications of new items to:</span><br>
     <input name="tableemail" gtpb_update_table #if($table.getEmail()) value="$table.getEmail()" #end onkeyup="top.oBuffer.writeBuffer(this);" maxKeyCount="6" identifier="$internalTableName" gtpb_internaltablename="$internalTableName" onfocus="this.setAttribute('focused','true')" onblur="this.removeAttribute('focused')"/>
     <p>
       <!-- table deletion button -->
