--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/report_fields/option_sets/filters_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/report_fields/option_sets/filters_data.vm
@@ -39,12 +39,12 @@
   	}	
 </script>
 
-<FORM action="AppController.servlet" target="pane_2" method=post id=newfilter>
+<FORM action="AppController.servlet" target="pane_2" method="post" id="newfilter">
 
 ##defined in ../../report_fields.vm
 ##set($report = $sessionData.getReport())
 
-<table id=reportData cellspacing="0">
+<table id="reportData" cellspacing="0" class="interdependent">
 	<THEAD >
 		<TR >
 			<th class=leading>&nbsp;</th>
@@ -195,4 +195,4 @@
 	
 	  //fSelectFilterOption(0); // moved to pane_3_tab_set.vm
 </SCRIPT>
-<script language=javascript src="resources/wait/interdependent_fields.js"></script>
+###<script language=javascript src="resources/wait/interdependent_fields.js"></script>
