Bugfix: don't do 'contains' filtering where exact filters are requested

--- a/gtpb_clientside/WEB-INF/templates/gui/public/form.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/public/form.vm
@@ -21,7 +21,7 @@
 #set($table = $gtpbPublicTable) ## Set in Public servlet
 #set($company = $gtpbCompany)
 <style>
-  input { margin: 10px; }
+  input,select { margin: 10px; }
 </style>
 #if($gtpbCss)
   <link rel="stylesheet" type="text/css" href="$gtpbCss" />
