--- a/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
@@ -27,14 +27,14 @@
   <tr>
     <td>Name:</td>
     <td>
-		#set($pane1_report_name="$report.getParentTable().getInternalTableName()$report.getInternalReportName()")
-      <input type="text" name="reportname" gtpb_update_report value="$report" pane1_report_name="$pane1_report_name" onkeyup="top.oBuffer.writeBuffer(this); parent.pane_1.fUpdateTitle('$pane1_report_name', this.value);" maxKeyCount="6" identifier="$report.getInternalReportName()" gtpb_internalreportname="$report.getInternalReportName()" onfocus="this.setAttribute('focused','true')" onblur="this.removeAttribute('focused')"/>
+		#set($pane1_report_name="$report.getParentTable().getInternalTableName()$internalReportName")
+      <input type="text" name="reportname" gtpb_update_report value="$report" pane1_report_name="$pane1_report_name" onkeyup="top.oBuffer.writeBuffer(this); parent.pane_1.fUpdateTitle('$pane1_report_name', this.value);" maxKeyCount="6" identifier="$internalReportName" gtpb_internalreportname="$internalReportName" onfocus="this.setAttribute('focused','true')" onblur="this.removeAttribute('focused')"/>
     </td>
   </tr>
   <tr>
     <td>Purpose:<br><span class="greytext">Purpose and any key users</span></td>
     <td>
-	  <textarea name="reportdesc" cols="60" rows="4" gtpb_update_report onkeyup="top.oBuffer.writeBuffer(this);" maxKeyCount="15" gtpb_internalreportname="$report.getInternalReportName()" onfocus="this.setAttribute('focused','true')" onblur="this.removeAttribute('focused')">$report.getReportDescription()</textarea>
+	  <textarea name="reportdesc" cols="60" rows="4" gtpb_update_report onkeyup="top.oBuffer.writeBuffer(this);" maxKeyCount="15" gtpb_internalreportname="$internalReportName" onfocus="this.setAttribute('focused','true')" onblur="this.removeAttribute('focused')">$report.getReportDescription()</textarea>
     </td>
   </tr>
   <tr>
@@ -44,7 +44,7 @@
     </td>
     <td>
 	      #set($reportModule = $report.getModule())
-	      <select name="internalmodulename" id="internalmodulename" gtpb_update_report onchange="new fChange(this); parent.pane_1.document.location = 'AppController.servlet?return=gui/pane1';" identifier="report.getInternalReportName()">
+	      <select name="internalmodulename" id="internalmodulename" gtpb_update_report onchange="new fChange(this); parent.pane_1.document.location = 'AppController.servlet?return=gui/pane1';" identifier="$internalReportName">
 		        <option value="">--Please choose a module--</option>
 		        #foreach($module in $modules)
 			          #if($module.equals($reportModule))
@@ -68,6 +68,12 @@
           <span class="upload_info" upload_speed="$view.getUploadSpeed()"></span>
         </div>
       </form>
+      #set($company = $viewMethods.getCompanyForLoggedInUser())
+      #set($internalCompanyName = $company.getInternalCompanyName())
+      #set($existingTemplates = $viewTools.listFiles("uploads/$internalCompanyName/$internalReportName"))
+      #foreach($template in $existingTemplates)
+        $template<br>
+      #end
     </td>
   </tr>
   <tr>
@@ -76,7 +82,7 @@
       Style:<br><span class='greytext'><i>Please select a visual style for the report (only applicable in certain cases)</i></span>
     </td>
     <td>
-        <select name="reportstyle" id="reportstyle" gtpb_update_report onchange="new fChange(this); parent.pane_1.document.location = 'AppController.servlet?return=gui/pane1';" identifier="report.getInternalReportName()">
+        <select name="reportstyle" id="reportstyle" gtpb_update_report onchange="new fChange(this); parent.pane_1.document.location = 'AppController.servlet?return=gui/pane1';" identifier="$internalReportName">
             <option value="SPREADSHEET" #if($reportStyle == "SPREADSHEET") selected #end>Spreadsheet - standard output in rows</option>
             <option value="SECTIONED" #if($reportStyle == "SECTIONED") selected #end>Sectioned - rows split into sections, with headings</option>
         </select>
@@ -85,7 +91,7 @@
   <tr>
     <td>&nbsp;</td>
     <td>
-      <input type=button value="Delete Report" onclick="parent.pane_1.document.location='AppController.servlet?return=gui/pane1&remove_report=true&internalreportname=$report.getInternalReportName()'">
+      <input type=button value="Delete Report" onclick="parent.pane_1.document.location='AppController.servlet?return=gui/pane1&remove_report=true&internalreportname=$internalReportName'">
     </td>
   </tr>
 </table>
