Download custom report templates

--- a/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
@@ -72,7 +72,7 @@
       #set($internalCompanyName = $company.getInternalCompanyName())
       #set($existingTemplates = $viewTools.listFiles("uploads/$internalCompanyName/$internalReportName"))
       #foreach($template in $existingTemplates)
-        <a href="uploads/$internalCompanyName/$internalReportName/$template.getName()" target="_blank">$template</a><br>
+        Template <a href="uploads/$internalCompanyName/$internalReportName/$template.getName()" target="_blank">$template</a><br>
       #end
     </td>
   </tr>
