--- a/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
@@ -57,7 +57,7 @@
     </td>
   </tr>
   <tr>
-    <td>Custom template:<br><span class="greytext"><i>Upload a custom printout or output template in HTML format (optional, will be available in addition to the standard record printout)</i></span></td>
+    <td>The Custom template:<br><span class="greytext"><i>Upload a custom printout or output template in HTML format (optional, will be available in addition to the standard record printout)</i></span></td>
     <td>
       <form class="fileUploader" method="POST" action="AppController.servlet">
         <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
