--- a/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
@@ -57,7 +57,7 @@
     </td>
   </tr>
   <tr>
-    <td>The Custom template:<br><span class="greytext"><i>Upload a custom printout or output template in HTML format (optional, will be available in addition to the standard record printout)</i></span></td>
+    <td>Custom template:<br><span class="greytext"><i>Upload a custom printout or output template in HTML format (optional, will be available in addition to the standard record printout)</i></span></td>
     <td>
       <form class="fileUploader" method="POST" action="AppController.servlet">
         <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
@@ -71,6 +71,7 @@
       #set($company = $viewMethods.getCompanyForLoggedInUser())
       #set($internalCompanyName = $company.getInternalCompanyName())
       #set($existingTemplates = $viewTools.listFiles("uploads/$internalCompanyName/$internalReportName"))
+      Existing templates are $existingTemplates<br>
       #foreach($template in $existingTemplates)
         Template <a href="uploads/$internalCompanyName/$internalReportName/$template.getName()" target="_blank">$template</a><br>
       #end
