--- a/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
@@ -63,18 +63,17 @@
       <form class="fileUploader" method="POST" action="AppController.servlet">
         <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
         <input type="hidden" name="upload_custom_template" value="true" />
-        <input type="file" name="templatename" class="submit-trigger" onChange="uploadFile(this);" />#if($report.getCustomTemplateName())<p>$report.getCustomTemplateName() #end
+        <input type="file" name="templatename" class="submit-trigger" onChange="uploadFile(this);" />
         <div class="upload_progress_container">
           <div class="upload_progress_bar"></div>
           <span class="upload_info" upload_speed="$view.getUploadSpeed()"></span>
         </div>
-      </form>
+      </form><p>
       #set($company = $view.getLoggedInUser().getCompany())
       #set($internalCompanyName = $company.getInternalCompanyName())
       #set($existingTemplates = $viewTools.listFiles("WEB-INF/templates/uploads/$internalCompanyName/$internalReportName"))
-      Existing templates are $existingTemplates<br>
       #foreach($template in $existingTemplates)
-        Template <a href="uploads/$internalCompanyName/$internalReportName/$template.getName()" target="_blank">$template</a><br>
+        $template <a href="?return=gui/reports_and_tables/pane3&remove_custom_template=true&customtemplatename=$template.getName()"><img src="resources/toolbar/delete.png" alt="delete $template"></a><br>
       #end
     </td>
   </tr>
