--- a/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
@@ -58,7 +58,7 @@
     </td>
   </tr>
   <tr>
-    <td>Custom template:<br><span class="greytext"><i>Upload a custom printout or output template in HTML format (optional, will be available in addition to the standard record printout)</i></span></td>
+    <td>Custom templates:<br><span class="greytext"><i>Upload custom printouts or output templates in HTML format (optional, will be available in addition to the standard record printout)</i></span></td>
     <td>
       <form class="fileUploader" method="POST" action="AppController.servlet">
         <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
@@ -76,7 +76,7 @@
         #set($filePath = $template.getName())
         #set($slashIndex = $filePath.lastIndexOf('/') + 1)
         #set($fileName = $filePath.substring($slashIndex))
-        $fileName <a href="?return=gui/reports_and_tables/pane3&remove_custom_template=true&customtemplatename=$fileName"><img src="resources/toolbar/delete.png" alt="delete $fileName" style="width:13px; height:13px"></a><br>
+        <a href="ReportDownloader.servlet?template=$fileName">$fileName</a> <a href="?return=gui/reports_and_tables/pane3&remove_custom_template=true&customtemplatename=$fileName"><img src="resources/toolbar/delete.png" alt="delete $fileName" style="width:13px; height:13px"></a><br>
       #end
     </td>
   </tr>
