Images for table layout selector

--- a/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
@@ -74,4 +74,5 @@
   <div id="2_columns_sectioned" style="float:left; width:33%; text-align:center">
     <img src="resources/tabs/2_columns_sectioned.png"><br>two columns within a section
   </div>
+  <br style="clear:both" />
 </div>
