--- a/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
@@ -64,15 +64,15 @@
 	</td>
   </tr>
 </table>
-<div id="layout_selector" style="width:100%; padding: 1em; background-color:#f4f4f4">
+<div id="layout_selector" style="width:100%; background-color:#f4f4f4">
 <h2>Choose a layout for the data entry form</h2>
-  <div id="1_column" style="float:left; width:33%; text-align:center">
+  <div id="1_column" class="select_layout selected_layout">
     <img src="resources/tabs/1_column.png"><br>one column
   </div>
-  <div id="2_columns" style="float:left; width:33%; text-align:center">
+  <div id="2_columns" class="select_layout">
     <img src="resources/tabs/2_columns.png"><br>sections in two columns
   </div>
-  <div id="2_columns_sectioned" style="float:left; width:33%; text-align:center">
+  <div id="2_columns_sectioned" class="select_layout">
     <img src="resources/tabs/2_columns_sectioned.png"><br>two columns within a section
   </div>
   <br style="clear:both" />
