--- a/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
@@ -64,15 +64,16 @@
 	</td>
   </tr>
 </table>
+#set($current_layout = $table.getFormLayout())
 <div id="layout_selector" style="width:100%; background-color:#f4f4f4; padding: 1em;">
 <h2>Choose a layout for the data entry form</h2>
-  <div id="single_column" class="select_layout selected_layout">
+  <div id="single_column" class="select_layout #if($current_layout == 'SINGLE_COLUMN') selected_layout #end">
     <img src="resources/tabs/1_column.png"><br>one column
   </div>
-  <div id="two_columns" class="select_layout">
+  <div id="two_columns" class="select_layout #if($current_layout == 'SINGLE_COLUMN') selected_layout #end">
     <img src="resources/tabs/2_columns.png"><br>sections in two columns
   </div>
-  <div id="two_columns_within_section" class="select_layout">
+  <div id="two_columns_within_section" class="select_layout #if($current_layout == 'SINGLE_COLUMN') selected_layout #end">
     <img src="resources/tabs/2_columns_sectioned.png"><br>two columns within a section
   </div>
   <br style="clear:both" />
